--- a/app/assets/stylesheets/print.css.sass
+++ b/app/assets/stylesheets/print.css.sass
@@ -56,7 +56,7 @@ table.ingredients
 
 
   .step_title
-    box-shadow: inset 0 0 1em $print_gray
+    box-shadow: 0 0 0.1em 1em $print_gray inset
     padding-left: 20px
     width:  100%
     clear: both
