--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -89,3 +89,17 @@ body.admin_namespace
   #activity_published_input label
     font-size: 20px
 
+#resource-actions
+  float: left
+  width: 100%
+  &.top
+    margin-bottom: 20px
+    padding-bottom: 20px
+    border-bottom: 1px solid $black
+  &.bottom
+    margin-top: 20px
+    padding-top: 20px
+    border-top: 1px solid $black
+  a, .admin-button
+    float: right
+
