--- a/app/views/admin/quizzes/_form.html.haml
+++ b/app/views/admin/quizzes/_form.html.haml
@@ -1,17 +1,17 @@
-- submit_options = @quiz.persisted? ? {} : {label: 'Upload Images'}
+- submit_options = @quiz.persisted? ? {label: 'Save Details'} : {label: 'Upload Images'}
 
 = semantic_form_for [:admin, @quiz] do |f|
   = f.inputs name: "Quiz Details" do
     = f.input :published
     = f.input :title
     = f.input :activity
-    = f.input :start_copy
-    = f.input :end_copy
-    - if @quiz.persisted?
-      %li
-        = link_to 'Edit Questions', manage_questions_admin_quiz_path(@quiz), class: 'admin-button'
-        = link_to 'Upload Images', upload_images_admin_quiz_path(@quiz), class: 'admin-button'
-  = f.actions do
-    = f.action :submit, submit_options
-    = f.action :cancel, wrapper_html: {class: :cancel}, label: 'Cancel'
+    = f.input :start_copy, label: 'Start Message'
+    = f.input :end_copy, label: 'End Message'
+    %li
+      = f.actions do
+        = f.action :submit, submit_options
+        = f.action :cancel, wrapper_html: {class: :cancel}, label: 'Cancel'
+  - if @quiz.persisted?
+    = link_to 'Edit Questions', manage_questions_admin_quiz_path(@quiz), class: 'admin-button'
+    = link_to 'Upload Images', upload_images_admin_quiz_path(@quiz), class: 'admin-button'
 
