--- a/app/views/admin/quizzes/manage_questions.html.haml
+++ b/app/views/admin/quizzes/manage_questions.html.haml
@@ -2,6 +2,9 @@
   window.ChefStepsAdmin = window.ChefStepsAdmin || {};
   window.ChefStepsAdmin.questionsData = JSON.parse('#{j(@questions)}');
 
+#resource-actions.top
+  = link_to 'Finish', admin_quizzes_path, class: 'admin-button'
+
 %h2 Questions for "#{@quiz.title}"
 
 #quiz-control-anchor{ data: { behavior: 'stick-to-top-anchor' } }
@@ -15,4 +18,7 @@
   #question-filters
     %button.admin-button.ordering{ data: {toggle: 'active', 'toggle-text' => 'Normal View'}} Re-order View
   %ol#question-list
+
+#resource-actions.bottom
+  = link_to 'Finish', admin_quizzes_path, class: 'admin-button'
 
