--- a/app/views/styleguide/_checkboxes.html.haml
+++ b/app/views/styleguide/_checkboxes.html.haml
@@ -5,21 +5,17 @@
   %h4 Checkboxes
   .row
     .span4
-      %li{ data: {behavior: 'checkbox'} }
-        = check_box_tag 'check-1', 'check-1', true
-        %label Checkbox 1. This is an example of the ChefSteps styled checkbox.
+      = fancy_checkbox_tag 'check-1', 'check-1', true do
+        Checkbox 1. This is an example of the ChefSteps styled checkbox.
     .span4
-      %li{ data: {behavior: 'checkbox'} }
-        = check_box_tag 'check-2', 'check-2', false
-        %label Checkbox 2. You can select multiple.
+      = fancy_checkbox_tag 'check-2', 'check-2' do
+        Checkbox 2. You can select multiple.
 
   %h4 Radio Group
   .row
     .span4
-      %li{ data: {behavior: 'radio'} }
-        = radio_button_tag 'radio', 'val1', false, id: 'val-1'
-        %label Radio 1. This is an example of the ChefSteps styled radio button.
+      = fancy_radio_button_tag 'radio', 'radio-1' do
+        Radio 1. This is an example of the ChefSteps styled radio button.
     .span4
-      %li{ data: {behavior: 'radio'} }
-        = radio_button_tag 'radio', 'val2', true, id: 'val-2'
-        %label Radio 2. You can only select one.
+      = fancy_radio_button_tag 'radio', 'radio-2', true do
+        Radio 2. You can only select one.
