change upload image copy

--- a/app/views/admin/quizzes/upload_images.html.haml
+++ b/app/views/admin/quizzes/upload_images.html.haml
@@ -10,7 +10,7 @@
 %h2 Upload Images for "#{@quiz.title}"
 
 #image-uploader
-  %button.admin-button{ data: {behavior: 'filepicker'}} Pick a File
+  %button.admin-button{ data: {behavior: 'filepicker'}} Upload Images for Quiz
   #image-list
 
 #resource-actions.bottom
