--- a/app/assets/stylesheets/print.css.sass
+++ b/app/assets/stylesheets/print.css.sass
@@ -3,6 +3,8 @@ $print_gray: rgb(220, 220, 220)
 p, body, .step-directions li, table.ingredients
   font-size: 12pt
 
+
+
 #overview h1
   color: black
   font-size: 15pt
@@ -36,7 +38,8 @@ table.ingredients
   margin-top: 0
 
 .hero-step-by-step
-  margin-bottom: 20px
+  margin-top: 1em
+  margin-bottom: 1em
 
   .step
     page-break-inside: avoid
@@ -57,11 +60,10 @@ table.ingredients
       display: inline-block
       width:  50%
 
-
-  .step_title
-    box-shadow: 0 0 0 2em $print_gray inset
-    padding-left: 20px
-    width:  100%
-    clear: both
+    .step_title
+      box-shadow: 0 0 0 2em $print_gray inset
+      padding-left: 20px
+      width:  100%
+      clear: both
 
 
