Small design changes from Ryan: - Activity nav arrows now have "next" and "prev" beside them - Step titles are black so they don't look like links

--- a/app/assets/stylesheets/application/activities/_step_by_step.css.sass
+++ b/app/assets/stylesheets/application/activities/_step_by_step.css.sass
@@ -13,7 +13,7 @@
   h3
     +font-serif-medium
   strong
-    color: $brick
+    color: $black
     font-weight: normal
   h6
     +font-sans-medium
