Checkpoint, going to try putting images back in

--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -58,7 +58,7 @@ table.ingredients
         width: 100%
 
 .right-of-ingredients
-  margin-top: 20px
+  margin-top: 1.6em
 
 .cooked-this-count
   margin-top: 15px
