handle quiz completion
For now we go to root path at end. Eventually we will go to the quiz end
page.

--- a/app/views/layouts/_app_init.html.haml
+++ b/app/views/layouts/_app_init.html.haml
@@ -2,7 +2,8 @@
   $(function() {
     new ChefSteps.init({
       profile: JSON.parse('#{user_signed_in? ? j(current_user_presenter.present) : false}'),
-      registrationCompletionPath: "#{thank_you_path}"
+      registrationCompletionPath: "#{thank_you_path}",
+      quizCompletionPath: "/"
     })
   });
 
