provide completion path in router
I figure we are already encoding knowledge about paths in the router, so
might as well do it here vs threading it down from rails.

--- a/app/views/layouts/_app_init.html.haml
+++ b/app/views/layouts/_app_init.html.haml
@@ -2,8 +2,7 @@
   $(function() {
     new ChefSteps.init({
       profile: JSON.parse('#{user_signed_in? ? j(current_user_presenter.present) : false}'),
-      registrationCompletionPath: "#{thank_you_path}",
-      quizCompletionPath: "/"
+      registrationCompletionPath: "#{thank_you_path}"
     })
   });
 
