use type=button to not post on click

--- a/app/views/admin/quizzes/manage_questions.html.haml
+++ b/app/views/admin/quizzes/manage_questions.html.haml
@@ -16,7 +16,7 @@
 
 #quiz-questions
   #question-filters
-    %button.admin-button.ordering{ data: {toggle: 'active', 'toggle-text' => 'Normal View'}} Re-order View
+    %button.admin-button.ordering{ type: 'button', data: {toggle: 'active', 'toggle-text' => 'Normal View'}} Re-order View
   %ol#question-list
 
 #resource-actions.bottom
