Printing - good enough. Looks how we want it from Firefox, oddly small on Safari, and for some reason step images break to a new line when printed from Chrome. But usable.

--- a/app/views/activities/_overview.html.haml
+++ b/app/views/activities/_overview.html.haml
@@ -31,7 +31,7 @@
         - if activity.has_ingredients?
           - activity.ordered_recipes.each do |recipe|
             = render 'ingredients_list', recipe: recipe
-      .span6.right-of-ingredients
+      .span6
         - if activity.yield.present? || activity.timing.present?
           .row
             .span4
