--- a/app/assets/stylesheets/print.css.sass
+++ b/app/assets/stylesheets/print.css.sass
@@ -6,16 +6,17 @@ $print_gray: rgb(220, 220, 220)
 @page
   margin: 1cm
 
-p, body, .step-directions li, table.ingredients
+p, body, .step-directions li, table.ingredients, .hero-unit
   font-size: 12pt
+  line-height: 1.2em
 
 #overview h1
   color: black
-  font-size: 15pt
+  font-size: 30pt
 
 .navbar .brand-container
-  margin: 0px auto
-  width:  400px
+  margin-left: 20%
+  margin-bottom: 2em
 
 .main-container
   padding: 0
@@ -31,42 +32,56 @@ p, body, .step-directions li, table.ingredients
   border: none
   padding-top: 0px
 
+.hero-unit
+  font-weight: normal
+
 a, .step strong, table.ingredients thead
   color: black !important
 
 table.ingredients
   margin-top: 6pt
+  width: 20em
+  line-height: 1em
+
+  thead
+    display: none
 
 .hero-step-by-step
-  margin-top: 1em
-  margin-bottom: 1em
+  margin-top: 0.5em
+  margin-bottom: 0.5em
 
   .step
+    margin-top: 1em !important
     page-break-inside: avoid
-
-    .span4
-      width: 100%
-
-    .well
-      background: transparent
-      border:  none !important
-      width: 30%
-      box-shadow:  none
-      display: inline-block
-      clear: none
-
-    .well+.step-directions
-      margin-top: 1.6em
-
-    .step-directions
-      vertical-align: top
-      display: inline-block
-      width:  50%
 
     .step_title
       box-shadow: 0 0 0 2em $print_gray inset
       padding-left: 20px
       width:  100%
-      clear: both
+      margin-top: 0px
+
+    .well
+      padding-top: 0
+      background: transparent
+      border:  none !important
+      box-shadow:  none
+
+    .step-directions
+      vertical-align: top
+
+    .step_directions_col
+      width: 60%
+
+    .step-img-col
+      margin-right: 0
+      width: 30%
+
+      .well
+        padding-right: 0
+
+      img
+        //filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale")/* Firefox 10+, Firefox on Android */
+        //filter: gray
+        -webkit-filter: grayscale(100%)
 
 
