hook filepicker up to question view

--- a/app/assets/stylesheets/admin/_quiz.css.sass
+++ b/app/assets/stylesheets/admin/_quiz.css.sass
@@ -142,3 +142,9 @@ ol#question-list
     .cancel, .done
       float: right
 
+.admin_namespace button.admin-button.upload-image
+  float: right
+  font-size: 24px
+  border-radius: 10px
+  padding: 12px 10px 10px 10px
+
