--- a/app/views/admin/quizzes/manage_questions.html.haml
+++ b/app/views/admin/quizzes/manage_questions.html.haml
@@ -1,3 +1,5 @@
+= render 'layouts/filepicker'
+
 :javascript
   window.ChefStepsAdmin = window.ChefStepsAdmin || {};
   window.ChefStepsAdmin.questionsData = JSON.parse('#{j(@questions)}');
