--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -156,6 +156,10 @@
       padding: 0
     .nav-anchors li
       padding: 0
+      a.icon-comment
+        width: 20px
+        overflow: hidden
+        height: 10px
 
   .global-navigation
     .navbar-inner
