--- a/app/views/styleguide/_dials.html.haml
+++ b/app/views/styleguide/_dials.html.haml
@@ -3,10 +3,10 @@
     %h3 Progress Dials
 .row
   .span4
-    = progress_dial 5, 20, 'normal'
+    = progress_dial 5, 20, label: 'normal'
   .span4
-    = progress_dial 10, 20, 'medium', 'medium'
+    = progress_dial 10, 20, label: 'medium', size: 'medium'
   .span4
-    = progress_dial 15, 20, 'small', 'small'
+    = progress_dial 15, 20, label: 'small', size: 'small'
 
 
