--- a/app/views/quizzes/show.html.haml
+++ b/app/views/quizzes/show.html.haml
@@ -15,7 +15,7 @@
     .row
       .span12
         %h3
-          Test your skills on
+          = quiz.started_by?(current_user) ? "Welcome back to" : "Test your skills on"
           %strong #{quiz.title}!
     .row.hero-unit.overview
       .span8
@@ -43,5 +43,6 @@
       .span12
         %p.pull-left= quiz.start_copy
         .pull-right
-          #start-quiz.btn-uppercase.btn-primary.btn-x-large Start Quiz
+          #start-quiz.btn-uppercase.btn-primary.btn-x-large
+            = quiz.started_by?(current_user) ? "Return to Quiz" : "Start Quiz"
 
