fix absolute positioning of next button

--- a/app/assets/stylesheets/application/quizzes/_question.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_question.css.sass
@@ -16,6 +16,13 @@
     border: 1px solid $grayMedium
     padding: 30px
     margin-right: 60px
+    position: relative
+
+    a
+      position: absolute
+      top: 40%
+      right: -50px
+      display: none
 
   .question-label
     +font-sans-tiny
@@ -29,9 +36,3 @@
     +font-serif-huge
     text-align: center
     margin-bottom: 20px
-
-  a
-    position: absolute
-    top: 42%
-    right: 10px
-    display: none
