hide hero-unit styling around question for iphone
The proportion of whitespace taken up by the column containing the next
button looks weird.

--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -242,6 +242,9 @@
     .dial-wrapper
       margin: 0
 
+    .question .hero-unit
+      background: none
+      border: none
 
 /* Everything but portrait iphone*/
 @media (min-width: 480px)
