fix centering of headers and labels
The header text and answer labels/average elements will now properly
vertically and horizontally center themselves for all layouts.

--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -125,12 +125,13 @@
   #quiz-results
     .results-header
       display: none
-    span.label
-      display: block
-      left: 0 !important
-    span.column-label
-      display: inline-block !important
-
+    .multiple-choice-results
+      .column-label
+        display: block
+      .average-label
+        display: inline-block
+      .average
+        +font-serif-tiny
 
 /* Android phone. Weird inbetween*/
 @media (max-width: 520px)
