--- a/app/views/quizzes/results.html.haml
+++ b/app/views/quizzes/results.html.haml
@@ -10,10 +10,11 @@
   .results-header.row
     .span6
       Questions:
-    .span2
-      Your Answer:
-    .span2
-      Correct Answer:
+    .span4
+      .center
+        Your Answer:
+      .center
+        Correct Answer:
     .span2
       Students Avg. Score:
   = render 'quizzes/multiple_choice_question_results', is_correct: true
