Tweak pointed out by Alex.

--- a/app/views/courses/_navigation.html.haml
+++ b/app/views/courses/_navigation.html.haml
@@ -1,4 +1,4 @@
-%div.noprint{ data: { behavior: 'stick-to-top-anchor' } }
+.noprint{ data: { behavior: 'stick-to-top-anchor' } }
 .sticky-navbar.noprint{ data: { behavior: 'stick-to-top' } }
   .container
     .navbar
