add borders for full layout

--- a/app/assets/stylesheets/application/_base.css.sass
+++ b/app/assets/stylesheets/application/_base.css.sass
@@ -65,6 +65,19 @@ ul.horizontal-list
   &.dotted
     border-top: 1px dotted $gray
 
+.bordered
+  border-style: dotted
+  border-color: $grayMedium
+  border-width: 0
+  &.top
+    border-top-width: 1px
+  &.right
+    border-right-width: 1px
+  &.left
+    border-left-width: 1px
+  &.bottom
+    border-bottom-width: 1px
+
 .icon-double-chevron-left
   @extend .icon-chevron-left
   &:before
