--- a/app/views/quizzes/results.html.haml
+++ b/app/views/quizzes/results.html.haml
@@ -9,21 +9,17 @@
 #quiz-results.container
   .results-header.row
     .span6
-      Questions:
+      .center
+        Questions:
     .span4
-      .center
+      .center.bordered.right.left
         Your Answer:
-      .center
+      .center.bordered.right
         Correct Answer:
     .span2
-      Students Avg. Score:
+      .center
+        Students Avg. Score:
   = render 'quizzes/multiple_choice_question_results', is_correct: true
-  .row
-    .span12
-      .horizontal-divider.dotted
   = render 'quizzes/multiple_choice_question_results', is_correct: false
-  .row
-    .span12
-      .horizontal-divider.dotted
   = render 'quizzes/multiple_choice_question_results'
 
