--- a/app/assets/stylesheets/admin/_quiz.css.sass
+++ b/app/assets/stylesheets/admin/_quiz.css.sass
@@ -159,6 +159,18 @@ ol#question-list
     cursor: pointer
     width: 40px
     height: 40px
+  [class*=icon-]
+    font-size: 16px
+    color: $gray
+    cursor: pointer
+  .delete-image
+    position: absolute
+  .edit-image
+    &:hover
+      color: $green
+  .delete-image
+    &:hover
+      color: $red
 
 .question-image
   float: left
