--- a/app/views/quizzes/_multiple_choice_question_results.html.haml
+++ b/app/views/quizzes/_multiple_choice_question_results.html.haml
@@ -14,7 +14,7 @@
         readymade trust fund, brunch bicycle rights mixtape consectetur
       %li
         deserunt wes anderson leggings tempor marfa.
-  .span4{ data: {behavior: 'container-height'} }
+  .span4.bordered.top.bottom{ data: {behavior: 'container-height'} }
     .result-column
       .center.bordered.left.right
         .column-label Your Answer:
