--- a/app/assets/stylesheets/application/quizzes/_results.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_results.css.sass
@@ -31,11 +31,16 @@
     text-align: center
 
   .multiple-choice-results
+    .bordered.top, .bordered-bottom
+      border-width: 0
+
     &:last-child
       border-bottom: none
+
     [class*='span']:first-child
       margin-top: 30px
       margin-bottom: 20px
+
     span
       +font-serif-small
       color: $grayMedium
