change copy for question type

--- a/app/views/quizzes/_multiple_choice_question_results.html.haml
+++ b/app/views/quizzes/_multiple_choice_question_results.html.haml
@@ -3,7 +3,7 @@
 .row.multiple-choice-results.bordered.bottom
   .span6
     %span.count 2 <i>of</i> 20
-    %span.type Multiple answer question
+    %span.type Multiple choice question
     %h4 apparel authentic occaecat, cred Austin post-ironic
     %ol
       %li
