--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -17,6 +17,7 @@
 @import twitter/bootstrap/variables
 @import twitter/bootstrap/mixins
 @import twitter/bootstrap/dropdowns
+@import twitter/bootstrap/scaffolding
 @import font-awesome
 
 
@@ -25,6 +26,9 @@ $redLight:      #e63742
 @import admin/quiz_image
 
 body.admin_namespace
+  .img-polaroid
+    @extend .img-polaroid
+
   table.nested-records
     display: none
     padding: 0 1.4em
