Add shopify store to global nav

--- a/app/views/layouts/_global_navigation.html.haml
+++ b/app/views/layouts/_global_navigation.html.haml
@@ -5,10 +5,11 @@
     %a{ href: course_url('accelerated-sous-vide-cooking-course'), target: '_top' }
       Course
       %i.icon-chevron-right.pull-right
--# %li
--#   %a{href: '', target: '_top'}
--#     Shop
--#     %i.icon-chevron-right.pull-right
+
+%li
+  %a{href: 'http://store.chefsteps.com', target: '_top'}
+    Shop
+    %i.icon-chevron-right.pull-right
 
 %li
   %a{href: 'http://forum.chefsteps.com', target: '_top'}
