add polaroid to edit form

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -107,3 +107,8 @@ body.admin_namespace
   a, .admin-button
     float: right
 
+.admin_namespace button.admin-button.upload-image
+  border-radius: 10px
+  padding: 12px 10px 10px 10px
+  [class*=icon-]
+    font-size: 24px
