--- a/app/assets/stylesheets/admin/_quiz.css.sass
+++ b/app/assets/stylesheets/admin/_quiz.css.sass
@@ -107,9 +107,32 @@ ol#question-list
     background: whitesmoke
     border: 1px dashed transparent
     input[type=text]
-      display: block
+      float: left
+    input[name=answer]
+      width: 73%
     label
       display: inline-block
+    .option-image-controls
+      float: right
+      position: absolute
+      top: 4px
+      right: 55px
+      img
+        width: 50px
+        height: 50px
+        cursor: pointer
+      [class*=icon-]
+        font-size: 16px
+        color: $gray
+        cursor: pointer
+      .delete-option-image
+        position: absolute
+      .edit-option-image
+        &:hover
+          color: $green
+      .delete-option-image
+        &:hover
+          color: $red
     .delete-option
       position: absolute
       right: 5px
