drive the results view with data

--- a/app/assets/stylesheets/application/quizzes/_results.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_results.css.sass
@@ -67,7 +67,7 @@
       background: $green
       color: $white
 
-    .label.wrong
+    .label.incorrect
       background: $red
       color: $white
 
