--- a/app/views/quizzes/_multiple_choice_question_results.html.haml
+++ b/app/views/quizzes/_multiple_choice_question_results.html.haml
@@ -1,29 +1,21 @@
-- is_correct ||= false
-- answer_result = is_correct ? 'correct' : 'wrong'
 .row.multiple-choice-results.bordered.bottom
   .span6
-    %span.count 2 <i>of</i> 20
+    %span.count #{count} <i>of</i> #{quiz_results.count}
     %span.type Multiple choice question
-    %h4 apparel authentic occaecat, cred Austin post-ironic
+    %h4= result[:question]
     %ol
-      %li
-        to-table qui PBR DIY pop-up odio dolore photo booth
-      %li
-        before they sold out art party ethical fingerstache butcher. Qui
-      %li
-        readymade trust fund, brunch bicycle rights mixtape consectetur
-      %li
-        deserunt wes anderson leggings tempor marfa.
+      - result[:options].each do |option|
+        %li= option[:answer]
   .span4.bordered.top.bottom{ data: {behavior: 'container-height'} }
     .result-column
       .center.bordered.left.right
         .column-label Your Answer:
-        %span.label{ class: answer_result } a
+        %span.label{ class: result[:correct] ? 'correct' : 'incorrect' } #{result[:answer]}
       .center.bordered.right
         .column-label Correct Answer:
-        %span.label.default a
+        %span.label.default #{result[:correct_answer]}
   .span2{ data: {behavior: 'container-height'} }
     .result-column
       .average.center
-        86%
+        #{result[:average]}%
         .average-label of students correctly answered.
