--- a/app/views/quizzes/results.html.haml
+++ b/app/views/quizzes/results.html.haml
@@ -19,7 +19,5 @@
     .span2
       .center
         Students Avg. Score:
-  = render 'quizzes/multiple_choice_question_results', is_correct: true
-  = render 'quizzes/multiple_choice_question_results', is_correct: false
-  = render 'quizzes/multiple_choice_question_results'
-
+  - quiz_results.each_with_index do |result, index|
+    = render 'quizzes/multiple_choice_question_results', result: result, count: index+1
