adjust quesiton option icon position

--- a/app/assets/stylesheets/admin/_quiz.css.sass
+++ b/app/assets/stylesheets/admin/_quiz.css.sass
@@ -127,6 +127,7 @@ ol#question-list
         cursor: pointer
       .delete-option-image
         position: absolute
+        top: 22px
       .edit-option-image
         &:hover
           color: $green
