use average_correct key instead of average

--- a/app/views/quizzes/_multiple_choice_question_results.html.haml
+++ b/app/views/quizzes/_multiple_choice_question_results.html.haml
@@ -17,5 +17,5 @@
   .span2{ data: {behavior: 'container-height'} }
     .result-column
       .average.center
-        #{result[:average]}%
+        #{result[:average_correct]}%
         .average-label of students correctly answered.
