--- a/app/views/admin/quizzes/_form.html.haml
+++ b/app/views/admin/quizzes/_form.html.haml
@@ -1,6 +1,11 @@
 - submit_options = @quiz.persisted? ? {label: 'Save Details'} : {label: 'Add Questions'}
 
 = render 'layouts/filepicker'
+
+:javascript
+  window.ChefStepsAdmin = window.ChefStepsAdmin || {};
+  window.ChefStepsAdmin.quizImageData = JSON.parse('#{j(@quiz_image || {}.to_json)}');
+
 = semantic_form_for [:admin, @quiz] do |f|
   = f.inputs name: "Quiz Details" do
     = f.input :published
@@ -10,7 +15,8 @@
     = f.input :end_copy, label: 'End Message'
     %li
       %label.label Quiz Image
-      %button.admin-button{type: 'button', data: {behavior: 'filepicker'}} Upload Quiz Image
+      #quiz-image
+        %button.admin-button{type: 'button', data: {behavior: 'filepicker'}} Upload Quiz Image
     %li
       = f.actions do
         = f.action :submit, submit_options
