--- a/app/views/activities/_quizzes.html.haml
+++ b/app/views/activities/_quizzes.html.haml
@@ -11,6 +11,7 @@
             .span4
               = link_to quiz_path(quiz) do
                 .image-with-caption
-                  = image_tag 'http://placehold.it/370x200/eee' #, class: 'img-polaroid'
+                  - if quiz.image
+                    = image_tag quiz.image.url, class: 'img-polaroid'
                   .image-caption
                     .image-caption-text= quiz.title
