add image to question template

--- a/app/assets/stylesheets/application/quizzes/_question.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_question.css.sass
@@ -36,3 +36,7 @@
     +font-serif-huge
     text-align: center
     margin-bottom: 20px
+
+  .question-image
+    margin: 0 auto 10px
+    float: none
