share styling from question image controls

--- a/app/assets/stylesheets/admin/_quiz_image.css.sass
+++ b/app/assets/stylesheets/admin/_quiz_image.css.sass
@@ -22,7 +22,7 @@
     .edit
       float: right
       font-size: 24px
-    .delete
+    .delete-image
       position: absolute
       top: 17px
       left: 17px
@@ -36,7 +36,7 @@
       display: none
       cursor: pointer
     &:hover
-      .delete
+      .delete-image
         display: inline-block
     form
       textarea
