--- a/app/assets/stylesheets/application/_checkboxes.css.sass
+++ b/app/assets/stylesheets/application/_checkboxes.css.sass
@@ -16,6 +16,10 @@
     padding: 5px 7px 1px 45px
     line-height: 26px
 
+    img
+      display: block
+      margin: 1px 0 3px
+
     &:before
       content: ''
       width: 26px
